--- a/src/products/templates/products/product_list.html
+++ b/src/products/templates/products/product_list.html
@@ -8,7 +8,7 @@
 <form method="GET" action="{% url 'products' %}">
 {{ filter_form|crispy }}
 <input type='hidden' name='q' value='{{ request.GET.q }}' />
-<input type='submit' value='Apply Filter' class='btn btn-default'>
+<input type='submit' value='Apply Filter' class='btn btn-success'>
 
 </form>
 
