--- a/src/products/templates/products/variation_list.html
+++ b/src/products/templates/products/variation_list.html
@@ -27,7 +27,7 @@
 {{ form.as_p }}
 
 {% endfor %}
-<input type="submit" value='Update' class='btn' />
+<input type="submit" value='Update' class='btn btn-danger' />
 </form>
 
 
